--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressRouter",
+  "name": "expressrouter",
   "version": "0.0.1",
   "scripts": {
     "start": "node Server.js",
@@ -11,5 +11,21 @@
     "really-need": "^1.9.2",
     "should": "^8.4.0",
     "supertest": "^1.2.0"
-  }
+  },
+  "description": "An Express JS Application to embrace the concept of routing.",
+  "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hemalatah/Simple-Express-JS-Application.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Hemalatah/Simple-Express-JS-Application/issues"
+  },
+  "homepage": "https://github.com/Hemalatah/Simple-Express-JS-Application#readme"
 }
+
